FB005: - corrected coordinates by fixing for loops in createBoard() - updated board styling with new font and spacing

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 }
 
 .game-board {
-    width: 220px;
-    height: 220px;
+    width: 230px;
+    height: 240px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -26,6 +26,21 @@
     background-color: #E5E4E2;
     display: flex;
     align-items: center;
+}
+
+.labels-row {
+    position: relative;
+    top: 17px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+    text-align: center;
+}
+
+.label {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    padding-bottom: 3px;
 }
 
 
